feat/configurations
