# src/models/configurations.model.ts
@@ -1,0 +1,25 @@
+import { Severity, modelOptions, prop } from '@typegoose/typegoose';
+
+@modelOptions({
+  options: { allowMixed: Severity.ALLOW },
+  schemaOptions: { collection: 'configurations', timestamps: true },
+})
+export class Configuration {
+  @prop({ required: false })
+  public numberOfDigits?: string;
+
+  @prop({ required: false })
+  public timeZone?: string;
+
+  @prop({ required: false })
+  public systemCurrency?: string;
+
+  @prop({ required: false })
+  public documentLimitSize?: string;
+
+  @prop({ required: false })
+  public rateSheetTemplate?: string;
+
+  @prop({ required: false })
+  public exchangeRateUpdateMargin?: string;
+}
